[package]
name = "swc-css-playground"
version = "0.0.0"
description = "Playground for SWC CSS."
authors = ["Pig Fang <g-plane@hotmail.com>"]
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "crate/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
swc_common = "0.27.13"
swc_css_ast = "0.110.0"
swc_css_parser = "0.119.0"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.4"
